# diy-alexa

./: README.md
firmware/: partitions.csv
firmware/components/application/: CMakeLists.txt  application.c
firmware/components/application/include/: application.h
firmware/components/audio_input/: CMakeLists.txt  i2s_mic_sampler.c  i2s_sampler.c  ring_buffer.c
firmware/components/audio_input/include/: i2s_mic_sampler.h  i2s_sampler.h  ring_buffer.h
firmware/components/audio_output/: CMakeLists.txt  i2s_output.c  spiffs_assist.c  wav_reader.c
firmware/components/audio_output/include/: i2s_output.h  spiffs_assist.h  wav_player.h  wav_profile.h  wav_reader.h
firmware/components/audio_processor/: CMakeLists.txt  audio_processor.c  hamming_window.c
firmware/components/audio_processor/include/: audio_processor.h  hamming_window.h
firmware/components/kissfft/: CMakeLists.txt
firmware/components/neural_network/: CMakeLists.txt  neural_network.cc
firmware/components/neural_network/include/: model.h  neural_network.h
firmware/components/state_machine/: CMakeLists.txt  detect_wake_word.c
firmware/components/state_machine/include/: detect_wake_word.h
firmware/components/tfmicro/: CMakeLists.txt
firmware/main/: CMakeLists.txt  main.c  main_config.h
